Fix PageLoaded callback for failed navigation and load.

This CL fixes 2 problems:
 - PageLoaded was called twice if load has failed after commit
 - PageLoaded was called before DidFinishNavigation on navigation failure

After the change loadNativeViewWithSuccess:navigationContext: does not
update loadPhase and does not call didFinishWithURL:loadSuccess:context:
because it's not a responsibility of loadNativeViewWithSuccess.

loadPhase update and didFinishWithURL:loadSuccess:context: calls where
moved to places which call loadNativeViewWithSuccess:navigationContext:.

Bug: 806457, 803232
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I2cc69018e189532fb3a4a0075451d4b30541ae34
Reviewed-on: https://chromium-review.googlesource.com/912245
Commit-Queue: Eugene But <eugenebut@chromium.org>
Reviewed-by: Danyao Wang <danyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536122}
Former-commit-id: 73f220adf7a80a14d0569b08b11fe18f345b497b